// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | FormField Default 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="unique-id-1"
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
</div>
`;

exports[`Storyshots Molecules | FormField Docs 1`] = `
<p>
  This component provides a label including the required look of the label. It also provides the displaying of error message and additional information.
</p>
`;

exports[`Storyshots Molecules | FormField Error 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="unique-id-2"
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
  <div>
    <span
      className="c4"
    >
      <div
        className="c5"
      >
        Error: 
      </div>
      error
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | FormField Extra info 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="unique-id-2"
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
  <div>
    <span
      className="c4"
    >
      Some extra info
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | FormField Required 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="unique-id-1"
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label *
      </div>
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
</div>
`;

exports[`Storyshots Molecules | FormField With group of items 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c6 > * {
  padding-left: 10px;
  padding-right: 10px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
  cursor: auto;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  padding: 0;
  margin: 0;
  border: 0;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <fieldset
    className="c1"
  >
    <div
      className="c2"
    >
      <legend
        className="NormalizedLegend__Legend-sc-1svgb20-0 c3 c4"
        hidden={false}
      >
        <span
          className="c5"
        >
          Caption to a group of items 
        </span>
      </legend>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          style={
            Object {
              "background": "aqua",
            }
          }
        >
          Pass in any children you want
        </div>
      </div>
      <div
        className="c7"
      >
        <div
          style={
            Object {
              "background": "aqua",
            }
          }
        >
          Pass in any children you want
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Molecules | FormField With label tooltip 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  stroke: #6E6E69;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  margin-left: 4px;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="unique-id-1"
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
        <svg
          aria-hidden="true"
          className="c4 c5"
          data-reach-tooltip-trigger=""
          focusable="false"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <g
            fillRule="evenodd"
            transform="translate(1 1)"
          >
            <circle
              className="c6"
              cx="11"
              cy="11"
              fill="none"
              r="11"
            />
            <path
              d="M9.4544,13.5528 L9.4544,13.3008 C9.4544,12.1584 9.4376,11.6376 11.1512,10.2432 C11.8904,9.6384 12.4784,9.2184 12.4784,8.496 C12.4784,7.8576 12.0248,7.3536 11.1176,7.3536 C10.1768,7.3536 9.656,7.9416 9.4376,8.6472 L6.9008,8.6472 C7.2368,6.3624 8.9504,5.1696 11.168,5.1696 C13.5032,5.1696 15.0992,6.4128 15.0992,8.3784 C15.0992,9.6888 14.5448,10.3776 13.0496,11.6544 C12.344,12.2424 11.84,12.6456 11.7056,13.3008 L11.6552,13.5528 L9.4544,13.5528 Z M11.9072,14.7288 L11.9072,17.4 L9.2696,17.4 L9.2696,14.7288 L11.9072,14.7288 Z"
              fillRule="nonzero"
            />
          </g>
        </svg>
      </div>
    </span>
  </label>
  <div
    style={
      Object {
        "background": "aqua",
      }
    }
  >
    Pass in any children you want
  </div>
</div>
`;
